# cp-core

./: .clang-format  CMakeLists.txt
src/: CMakeLists.txt  Empty.h  Error.h  Result.h
src/secrets/: BitwardenSecretsManager.cpp  BitwardenSecretsManager.h  CMakeLists.txt  ErrorKind.h  ISecretsManager.h
tests/: CMakeLists.txt  ErrorTest.cpp  ResultTest.cpp
tests/secrets/: BitwardenSecretsManagerTest.cpp  BitwardenSecretsManagerTest.h
